# EiMM-Hostbot

./: .gitignore  README.md  bidoof.py  pip-requirements.txt  pyproject.toml
cogs/: eimm.py  emoji_count.py  emoji_schema.py  hostbot.py  hostbot_readme.md  hostbot_schema.py  interview.py  interview_schema.py  macro.py  passwords.py  profiles.py  walrus.py  walrus_schema.py
conf/: conf.py  settings-example.py
core/: bot.py  imgur.py
examples/: server_setup.yml
game/: discord_inputs.py
game/data_engine/: abstract_engine.py  sheet_engine.py
plugins/: emoji_count.py  emoji_schema.py  fun.py  hostbot.py  hostbot_schema.py  scryfall.py  utility.py  votes.py
schemas/: scryfall_schema.py
utils/: menu.py  spreadsheet.py  utils.py
