[tool.poetry]
name = "EiMM Hostbot"
version = "0.1.0"
description = "EiMM hostbot for eimm things"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^6.0"
numpy = "1.18"
black = "^21.12b0"
"discord.py" = {extras = ["voice"], version = "^1.7.3"}
fuzzywuzzy = "^0.18.0"
dice = "^3.1.2"
gspread = "^5.2.0"
imgurpython = "^1.1.7"
munkres = "^1.1.4"
oauth2client = "^4.1.3"
Pillow = "^9.3.0"
pycountry = "^22.3.5"
python-Levenshtein = "^0.12.2"
pytz = "^2021.3"
SQLAlchemy = "^1.4.39"
aiosqlite = "^0.17.0"

[tool.poetry.dev-dependencies]
ipython = "^7.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
