[tool.poetry]
name = "EiMM Hostbot"
version = "0.1.0"
description = "EiMM hostbot for eimm things"
authors = ["euklyd <you@example.com>"]

[tool.poetry.scripts]
bidoof = "bidoof:main"

[tool.poetry.scripts]
bidoof = "bidoof:run"

[tool.poetry.dependencies]
python = "^3.9.10"
PyYAML = "^6.0"
numpy = "^1.22.3"
fuzzywuzzy = "^0.18.0"
dice = "^3.1.2"
imgurpython = "^1.1.7"
munkres = "^1.1.4"
oauth2client = "^4.1.3"
Pillow = "^9.0.1"
pycountry = "^22.3.5"
python-Levenshtein = "^0.12.2"
pytz = "^2022.1"
gspread-asyncio = "^1.5.3"
SQLAlchemy = "^1.4.39"
aiosqlite = "^0.17.0"
"discord.py" = "^2.0.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
ipython = "^8.4.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
